--- a/index.HTML
+++ b/index.HTML
@@ -1,3 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Julia M</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <div class="container">
+<nav>
+        <ul>
+            <li>
+                <a>Sobre mim</a>
+            </li>
+                        <li>
+                <a>Projetos</a>
+            </li>
+                        <li>
+                <a>Contato</a>
+            </li>
+        </ul>
+    </nav>
 
 <!DOCTYPE html>
 <html lang="en">
